--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,120 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+nav {
+  border-bottom: 2px solid #eee;
+  padding: 16px;
 }
 
 button {
+  background-color: green;
+  border: none;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  color: white;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  outline: none;
+  padding: 16px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+input,
+select {
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  outline: none;
+  padding: 16px;
+}
+
+.app-heading {
+  display: inline-block;
+  margin: 8px;
+}
+
+.logged-in-as {
+  float: right;
+  margin-right: 16px;
+}
+
+.sign-out-button {
+  float: right;
+}
+
+.centered-container {
+  max-width: 750px;
+  margin: auto;
+}
+
+.section-heading {
+  border-bottom: 1px solid black;
+  padding-bottom: 16px;
+}
+
+.list-item {
+  align-items: center;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  padding: 16px;
+}
+
+.list-item-data {
+  flex: 1;
+}
+
+.new-message-form {
+  padding: 16px 0;
+  display: flex;
+}
+
+.new-message-form input {
+  flex: 8;
+}
+
+.new-message-form button {
+  flex: 1;
+}
+
+.error-message {
+  background-color: #ffccbb;
+  padding: 8px;
+  border-radius: 4px;
+}
+
+.full-width {
+  display: block;
+  width: 100%;
+}
+
+.space-before {
+  margin-top: 16px;
+}
+
+.space-after {
+  margin-bottom: 16px;
 }
